--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,8 +9,8 @@
 			<!-- Logo
 			============================================= -->
 			<div id="logo">
-				<a href="index.html" class="standard-logo" data-dark-logo="/img/logo-dark.png"><img src="/img/logo.png" alt="Canvas Logo"></a>
-				<a href="index.html" class="retina-logo" data-dark-logo="/img/logo-dark@2x.png"><img src="/img/logo@2x.png" alt="Canvas Logo"></a>
+				<a href="#" class="standard-logo" data-dark-logo="/img/logo-dark.png"><img src="/img/logo.png" alt="Canvas Logo"></a>
+				<a href="#" class="retina-logo" data-dark-logo="/img/logo-dark@2x.png"><img src="/img/logo@2x.png" alt="Canvas Logo"></a>
 			</div><!-- #logo end -->
 
 			<!-- Primary Navigation
@@ -18,21 +18,22 @@
 			<nav id="primary-menu" class="with-arrows clearfix not-dark">
 
 				<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
-					<li><a href="#" data-href="#wrapper"><div>Home</div></a></li>
-					<li><a href="#" data-href="#section-nextgen"><div>Explore</div></a>
+					<li><a href="#" data-href="#wrapper"><div>Início</div></a></li>
+					<li><a href="#" data-href="#section-nextgen"><div>Funcionalidades</div></a>
 						<ul>
 							<li><a href="#" data-href="#section-nextgen"><div>NextGen Framework</div></a></li>
 							<li><a href="#" data-href="#section-stunning-graphics"><div>Stunning Graphics</div></a></li>
 							<li><a href="#" data-href="#section-secured-solutions"><div>Secured Solutions</div></a></li>
 						</ul>
 					</li>
-					<li><a href="#" data-href="#section-pricing"><div>Pricing</div></a></li>
+					<li><a href="#" data-href="#section-pricing"><div>Preços</div></a></li>
 				</ul>
 
 				<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
-					<li><a href="#" data-href="#section-faqs"><div>FAQs</div></a></li>
-					<li><a href="#" data-href="#section-gallery"><div>Gallery</div></a></li>
-					<li class="menu-item-emphasis"><a href="#modal-login" data-lightbox="inline"><div>Login</div></a></li>
+					<li><a href="#" data-href="#section-faqs"><div>Dúvidas</div></a></li>
+					<!--<li><a href="#" data-href="#section-gallery"><div>Entrar</div></a></li>-->
+					<li><a href="#" data-href="#"><div>Entrar</div></a></li>
+					<li class="menu-item-emphasis"><a href="#modal-login" data-lightbox="inline"><div>Teste Grátis</div></a></li>
 				</ul>
 
 			</nav><!-- #primary-menu end -->
