--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,16 +10,16 @@
 	<!-- #header end -->
 
 	<section id="slider" class="full-screen slider-parallax">
-		<div class="slider-parallax-inner" style="background: url('/img/hero/hero.jpg') center center no-repeat; background-size: cover;">
+		<div class="slider-parallax-inner" style="background: url('/img/hero/zeilboot.jpg') center center no-repeat; background-size: cover;">
 			<div class="vertical-middle" style="z-index: 2;">
 				<div class="container dark clearfix">
 					<div class="row clearfix">
 						<div class="col-md-6 col-sm-8">
 							<div class="emphasis-title">
-								<h1 class="font-body">Beautiful Websites.<br>Increased Conversions.</h1>
+								<h1 class="font-body" style="text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.86);">O primeiro sistema de navegação empresarial</h1>
 							</div>
-							<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Try it Free</a>
-							<a href="//www.youtube.com/watch?v=etg2KJaZTpw" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a>
+							<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Teste Grátis</a>
+							<a href="//www.youtube.com/watch?v=etg2KJaZTpw" class="hero-action-link" data-lightbox="iframe" style="text-shadow: 2px 2px 8px rgb(0, 0, 0);"><i class="icon-play-sign"></i> Veja o vídeo</a>
 						</div>
 					</div>
 				</div>
@@ -76,11 +76,11 @@
 							<div class="topmargin-lg hidden-xs hidden-sm"></div>
 							<img src="/img/section/section-1-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 							<div class="emphasis-title bottommargin-sm">
-								<span class="before-heading">Plug into the</span>
-								<h2 style="font-size: 42px;" class="font-body ls1 t400">NextGen Framework</h2>
+								<!--<span class="before-heading"></span>-->
+								<h2 style="font-size: 42px;" class="font-body ls1 t400">Apresentamos o Sail System</h2>
 							</div>
-							<p style="color: #777;" class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
-							<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>
+							<p style="color: #777;" class="lead">O primeiro sistema desenvolvido para ajudar você, a navegar sua empresa.</p>
+							<!--<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>-->
 						</div>
 
 					</div>
@@ -95,11 +95,11 @@
 							<div class="topmargin-lg hidden-xs hidden-sm"></div>
 							<img src="/img/section/section-2-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 							<div class="emphasis-title bottommargin-sm">
-								<span class="before-heading">Retina Ready &#x7E; 534 PPI</span>
-								<h2 style="font-size: 42px;" class="font-body ls1 t400">Stunning Graphics</h2>
+								<!--<span class="before-heading">Retina Ready &#x7E; 534 PPI</span>-->
+								<h2 style="font-size: 42px;" class="font-body ls1 t400">Tenha o controle do seu negócio</h2>
 							</div>
-							<p style="color: #777;" class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
-							<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>
+							<p style="color: #777;" class="lead">Gerir um negócio é muito parecido com comandar um barco num mar revolto. Você tem uma direção definida, uma equipe a coordenar e tormentas a enfrentar.</p>
+							<!--<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>-->
 						</div>
 
 						<div class="col-md-7 center">
@@ -121,11 +121,11 @@
 							<div class="topmargin-lg hidden-xs hidden-sm"></div>
 							<img src="/img/section/section-3-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 							<div class="emphasis-title bottommargin-sm">
-								<span class="before-heading">Privacy Protected</span>
-								<h2 style="font-size: 42px;" class="font-body ls1 t400">Secured Solutions</h2>
+								<!--<span class="before-heading">Privacy Protected</span>-->
+								<h2 style="font-size: 42px;" class="font-body ls1 t400">Meta, Indicadores, Processos e Equipe</h2>
 							</div>
-							<p style="color: #777;" class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, vel! Eius pariatur nemo expedita.</p>
-							<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>
+							<p style="color: #777;" class="lead">O Sail System ajuda você a alinhar sua rota com todos de sua equipe e permite à você saber como cada um está desempenhando sua missão.</p>
+							<!--<a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a>-->
 						</div>
 					</div>
 				</div>
@@ -141,14 +141,14 @@
 				<div id="section-pricing" class="page-section nopadding nomargin">
 
 					<div class="pricing-tenure-switcher center bottommargin-sm" data-container="#pricing-switch">
-						<span class="pts-left">Monthly</span>
+						<span class="pts-left">Mensal</span>
 						<div class="pts-switcher">
 							<div class="switch">
 								<input id="switch-toggle-pricing-tenure" class="switch-toggle switch-toggle-round" type="checkbox">
 								<label for="switch-toggle-pricing-tenure"></label>
 							</div>
 						</div>
-						<span class="pts-right">Yearly</span>
+						<span class="pts-right">Anual</span>
 					</div>
 
 					<div id="pricing-switch" class="pricing row bottommargin-lg clearfix">
@@ -157,18 +157,16 @@
 
 							<div class="pricing-box">
 								<div class="pricing-title">
-									<h3>Starter</h3>
+									<h3>Tenente</h3>
 								</div>
 								<div class="pricing-price">
-									FREE<span class="price-tenure">Limited Access</span>
+									GRÁTIS<span class="price-tenure">POR 30 DIAS</span>
 								</div>
 								<div class="pricing-features">
 									<ul>
-										<li><strong>Full</strong> Access</li>
-										<li><i class="icon-code"></i> Source Files</li>
-										<li><strong>100</strong> User Accounts</li>
-										<li><strong>1 Year</strong> License</li>
-										<li>Phone &amp; Email Support</li>
+										<li>Acesso <strong>Limitado</strong></li>
+										<li><strong>1</strong> usuário</li>
+										<li>Suporte por E-mail e Telefone</li>
 									</ul>
 								</div>
 								<div class="pricing-action">
@@ -182,23 +180,18 @@
 
 							<div class="pricing-box">
 								<div class="pricing-title">
-									<h3>Professional</h3>
+									<h3>Capitão</h3>
 								</div>
 								<div class="pricing-price">
-									<div class="pts-switch-content-left"><span class="price-unit">&dollar;</span>12<span class="price-tenure">Monthly</span></div>
-									<div class="pts-switch-content-right"><span class="price-unit">&dollar;</span>99<span class="price-tenure">Yearly</span></div>
+									<div class="pts-switch-content-left"><span class="price-unit">R&dollar;</span>12<span class="price-tenure">Mensal</span></div>
+									<div class="pts-switch-content-right"><span class="price-unit">R&dollar;</span>99<span class="price-tenure">Anual</span></div>
 								</div>
 								<div class="pricing-features">
 									<ul>
-										<li><strong>Full</strong> Access</li>
-										<li><i class="icon-code"></i> Source Files</li>
-										<li><strong>1000</strong> User Accounts</li>
-										<li><strong>2 Years</strong> License</li>
-										<li><i class="icon-star3"></i>
-										<i class="icon-star3"></i>
-										<i class="icon-star3"></i>
-										<i class="icon-star3"></i>
-										<i class="icon-star3"></i></li>
+										<li>Acesso <strong>Completo</strong></li>
+										<li>Até <strong>5</strong> usuários</li>
+										<li>Suporte por E-mail e Telefone</li>
+										<li>Treinamento <strong>Gestão de Processos</strong></li>
 									</ul>
 								</div>
 								<div class="pricing-action">
@@ -213,19 +206,19 @@
 
 							<div class="pricing-box">
 								<div class="pricing-title">
-									<h3>Business</h3>
+									<h3>Almirante</h3>
 								</div>
 								<div class="pricing-price">
-									<div class="pts-switch-content-left"><span class="price-unit">&dollar;</span>19<span class="price-tenure">Monthly</span></div>
-									<div class="pts-switch-content-right"><span class="price-unit">&dollar;</span>149<span class="price-tenure">Yearly</span></div>
+									<div class="pts-switch-content-left"><span class="price-unit">R&dollar;</span>19<span class="price-tenure">Mensal</span></div>
+									<div class="pts-switch-content-right"><span class="price-unit">R&dollar;</span>149<span class="price-tenure">Anual</span></div>
 								</div>
 								<div class="pricing-features">
 									<ul>
-										<li><strong>Full</strong> Access</li>
-										<li><i class="icon-code"></i> Source Files</li>
-										<li><strong>500</strong> User Accounts</li>
-										<li><strong>3 Years</strong> License</li>
-										<li>Phone &amp; Email Support</li>
+										<li>Acesso <strong>Completo</strong></li>
+										<li>Implantação</li>
+										<li>Até <strong>10</strong> usuários</li>
+										<li>Suporte por E-mail e Telefone</li>
+										<li>Treinamento <strong>Gestão de Processos Avançado</strong></li>
 									</ul>
 								</div>
 								<div class="pricing-action">
@@ -302,31 +295,23 @@
 
 					<div class="row topmargin-sm clearfix">
 
-						<h2 class="center font-body bottommargin-lg">Frequently Asked Questions</h2>
+						<h2 class="center font-body bottommargin-lg">Perguntas Frequentes</h2>
 
 						<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">How do I become an author?</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">O que é o Sail System?</h4>
+							<p>É um sistema que garante que a Gestão da Rotina de sua empresa funcione do jeito que deveria. Ele te ajuda a desdobrar as metas em indicadores e a distribuí-los entre os membros de sua equipe. Cada um saberá exatamente por qual indicador é responsável e o que a empresa espera dele.</p>
 						</div>
 						<div class="col-md-5 col-sm-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">Helpful Resources for Authors</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, placeat, architecto rem dolorem dignissimos repellat veritatis in et eos doloribus magnam aliquam ipsa alias assumenda officiis quasi sapiente suscipit.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">Como o sistema conecta Estratégia e Gestão da Rotina?</h4>
+							<p>Por meio do desdobramento dos indicadores em cada um dos processos. O Sail permite que você crie Descrições do Negócio e determine os indicadores de cada uma delas. Além disso, você saberá quem é responsável pelo que e quais os Procedimentos estão suportando seu negócio.</p>
 						</div>
 						<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">How much money can I make?</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, fugiat iste nisi tempore nesciunt nemo fuga? Nesciunt, delectus laboriosam nisi repudiandae nam fuga saepe animi recusandae.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">Como eu consigo fazer a gestão do negócio?</h4>
+							<p>O Sail permite que você crie seu Dashboard de Gestão. Com ele, todos os gestores terão seu painel de metas e resultados, em que será possível entender o quão longe você está de suas metas e quais processos precisam ser melhorados para que as metas sejam batidas.</p>
 						</div>
 						<div class="col-md-5 col-sm-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">Can I offer my items for free on a promotional basis?</h4>
-							<p>Laboriosam iusto quia nulla ad voluptatibus iste beatae voluptas corrupti facilis accusamus recusandae sequi debitis reprehenderit quibusdam. Facilis eligendi a exercitationem nisi et placeat excepturi velit!</p>
-						</div>
-						<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">An Introduction to the Marketplaces for Authors</h4>
-							<p>Quisquam atque vero delectus corrupti! Quo, maiores, dolorem, hic commodi nulla ratione accusamus doloribus fuga magnam id temporibus dignissimos deleniti quidem ipsam corporis sapiente nam expedita saepe quas ab? Vero, assumenda.</p>
-						</div>
-						<div class="col-md-5 col-sm-6">
-							<h4 class="font-body" style="margin-bottom:15px;">How does the Tuts+ Premium affiliate program work?</h4>
-							<p class="nobottommargin">Reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">De onde surgiu o Sail System?</h4>
+							<p>Surgiu da necessidade das empresas de todos os tamanhos e ramos, buscarem à Excelência Profissional. Em nossos mais de 10 anos de consultoria, participamos de diversos projetos que trouxeram grandes resultados. Porém, quando saíamos da empresa, algumas não conseguiam manter os resultados alcançados. Pensando nisso, criamos um Consultor de Processos e Gestão da Rotina totalmente automatizado, que estará ao seu lado na caminhada da empresa rumo à Excelência Operacional.</p>
 						</div>
 
 					</div>
@@ -439,49 +424,49 @@
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-browser inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Cross Browser</h4>
+								<h4 style="font-size: 16px;">Defina claramente os papéis e responsabilidades</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Canvas 4 Loads Faster &amp; Smoother than the Previous Versions providing an Optimal Experience for your Users.</p>
+							<p class="" style="line-height: 26px;">Com o Sail System, você saberá quem é responsável pelo que. Você saberá quem é responsável por cada uma das metas, indicadores, processos e procedimentos.</p>
 						</div>
 
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-adjustments inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Flexible Options</h4>
+								<h4 style="font-size: 16px;">Organize seus Processos</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Unleash the Power of Mega Menus by adding Widgets &amp; Mixed Columns powered by the Bootstrap Grid.</p>
+							<p class="" style="line-height: 26px;">Saiba a finalidade de cada um dos seus processos, por meio da Descrição de Negócios, Indicadores e dos Procedimentos Operacionais Padrão. Tenha o controle de todos seus processos, num único sistema.</p>
 						</div>
 
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-calendar inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Scheduled Backups</h4>
+								<h4 style="font-size: 16px;">Padronize seus Procedimentos</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Amazing set of New Components giving you Opportunity to Create an Interactive Website for your Business.</p>
+							<p class="" style="line-height: 26px;">Acabe com a variação na hora da equipe executar seus processos. Tenha seus procedimentos organizados em um só repositório e saiba exatamente o seu resultado.  Elimine a ausência de padrão tão comum em tantas empresas.</p>
 						</div>
 
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-desktop inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Responsive Ready</h4>
+								<h4 style="font-size: 16px;">Gestão à Vista</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Convert any Grid to an Isotope Grid easily with Filterable Options making it extremely flexible and powerful.</p>
+							<p class="" style="line-height: 26px;">Tenha visibilidade total de sua cabine de comando. Saiba quais itens de controle não estão dentro da meta e saiba quem são os responsáveis pelos desvios.</p>
 						</div>
 
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-bargraph inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Increased Conversions</h4>
+								<h4 style="font-size: 16px;">Excelência Operacional</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Display an Alternate Lighter Menu on Responsive Devices with the same Markup Code as before. Awesomely Useful.</p>
+							<p class="" style="line-height: 26px;">Saiba quais processos devem ser melhorados para que sua empresa alcance à Excelência em sua operação.</p>
 						</div>
 
 						<div class="col-md-4 bottommargin">
 							<i class="i-plain i-large icon-et-cloud inline-block" style="margin-bottom: 30px; color: #999;"></i>
 							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Cloud Sharing</h4>
+								<h4 style="font-size: 16px;">Alinhe as metas e objetivos da Empresa</h4>
 							</div>
-							<p class="" style="line-height: 26px;">Added SPAM Protection for your Precious Forms so that you receive Emails only from Authentic Real Users.</p>
+							<p class="" style="line-height: 26px;">Garanta que toda empresa saiba exatamente como está contribuindo para o resultado geral. Mostre quais processos e resultados, cada um dos membros de sua equipe é responsável.</p>
 						</div>
 
 					</div>
@@ -492,8 +477,8 @@
 				<div class="container clearfix">
 
 					<h3 class="ls1 t400" style="font-size: 32px;">Experienced &amp; Trusted by <span>16,000+</span> People worldwide</h3>
-					<a href="#modal-login" data-lightbox="inline" class="button button-large button-black capitalize" style="border-radius: 23px;">Login Now</a>
-					<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large capitalize" style="border-radius: 23px;">Try it Free</a>
+					<a href="#modal-login" data-lightbox="inline" class="button button-large button-black capitalize" style="border-radius: 23px;">Entre Agora</a>
+					<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large capitalize" style="border-radius: 23px;">Teste Grátis</a>
 
 					<div class="clear bottommargin"></div>
 
