--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,14 +13,14 @@
 						<div class="row clearfix">
 							<div class="col-md-8 bottommargin-sm clearfix" style="color:#888;">
 								<img src="/img/footer-logo.png" alt="Canvas Logo" style="display: block;" class="bottommargin-sm">
-								<p>Text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, consequatur facere molestiae iusto atque.</p>
+								<p>Nosso sonho é transformar o Brasil e suas empresas, por meio da educação. Só quando inovação e melhoria continua fizerem parte de sua gente, é que a empresa chegará à sua Excelência Competitiva.</p>
 
-								<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
+								<a href="https://www.facebook.com/projetosemelhoria" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
 									<i class="icon-facebook"></i>
 									<i class="icon-facebook"></i>
 								</a>
 
-								<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-twitter">
+								<a href="https://twitter.com/fm2s" class="social-icon si-small si-borderless si-colored si-rounded si-twitter">
 									<i class="icon-twitter"></i>
 									<i class="icon-twitter"></i>
 								</a>
@@ -51,40 +51,35 @@
 
 						<div class="col-md-4 bottommargin-sm">
 							<div class="widget widget_links app_landing_widget_link clearfix">
-								<h4>In News</h4>
+								<h4>Empresa</h4>
 
 								<ul>
-									<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-									<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-									<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-									<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-									<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
+									<li><a href="http://www.fm2s.com.br/sobre-nos/">Sobre Nós</a></li>
+									<li><a href="http://www.fm2s.com.br/contato/">Contato</a></li>
+									<li><a href="http://downloads.fm2s.com.br/formulario-trabalhe-conosco">Trabalhe Conosco</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-md-4 bottommargin-sm">
 							<div class="widget widget_links app_landing_widget_link clearfix">
-								<h4>About Us</h4>
+								<h4>Treinamentos</h4>
 
 								<ul>
-									<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-									<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-									<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-									<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-									<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
+									<li><a href="http://www.fm2s.com.br/treinamentos-e-cursos/">Treinamentos Corporativos</a></li>
+									<li><a href="http://ead.fm2s.com.br">Nossos Cursos</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-md-4 bottommargin-sm">
 							<div class="widget widget_links app_landing_widget_link clearfix">
-								<h4>Support</h4>
+								<h4>Consultoria</h4>
 
 								<ul>
-									<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-									<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-									<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-									<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-									<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
+									<li><a href="http://www.fm2s.com.br/choque-de-gestao/">Choque de Gestão</a></li>
+									<li><a href="http://www.fm2s.com.br/gestao-da-rotina/">Gestão da Rotina</a></li>
+									<li><a href="http://www.fm2s.com.br/excelencia-operacional/">Excelência Operacional</a></li>
+									<li><a href="http://www.fm2s.com.br/implementacao-de-projetos/">Implementação de Projetos</a></li>
+									<li><a href="http://www.fm2s.com.br/reestruturacao-de-processos/">Reestruturação de Projetos</a></li>
 								</ul>
 							</div>
 						</div>
@@ -104,8 +99,8 @@
 		<div class="container clearfix">
 
 			<div class="col_half">
-				Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
-				<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+				FM2S &copy; Todos os direitos reservados.<br>
+				<!--<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>-->
 			</div>
 
 		</div>
