--- a/views/index.ejs
+++ b/views/index.ejs
@@ -476,7 +476,7 @@
 			<div class="section center nobottommargin nobg">
 				<div class="container clearfix">
 
-					<h3 class="ls1 t400" style="font-size: 32px;">Experienced &amp; Trusted by <span>16,000+</span> People worldwide</h3>
+					<h3 class="ls1 t400" style="font-size: 32px;"><span>10+ anos</span> de Projetos e Treinamentos num só sistema</h3>
 					<a href="#modal-login" data-lightbox="inline" class="button button-large button-black capitalize" style="border-radius: 23px;">Entre Agora</a>
 					<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large capitalize" style="border-radius: 23px;">Teste Grátis</a>
 
@@ -490,13 +490,13 @@
 
 					<div class="row clearfix">
 						<div class="col-md-4">
-							<div class="app-footer-features"><i class="icon-line2-globe-alt"></i><h5 class="font-body"><a href="#">Free Taining</a><span> &amp; 24-hour coverage</span></h5></div>
+							<div class="app-footer-features"><i class="icon-line2-globe-alt"></i><h5 class="font-body"><a href="#">20+ milhões</a><span> economizados</span></h5></div>
 						</div>
 						<div class="col-md-4">
-							<div class="app-footer-features"><i class="icon-line2-notebook"></i><h5 class="font-body"><a href="#">99.99% Uptime</a><span> the last 12 months</span></h5></div>
+							<div class="app-footer-features"><i class="icon-line2-notebook"></i><h5 class="font-body"><a href="#">8.000+ profissionais</a><span> treinados</span></h5></div>
 						</div>
 						<div class="col-md-4">
-							<div class="app-footer-features"><i class="icon-line2-lock"></i><h5 class="font-body"><span>Serious about</span> <a href="#">Security</a> <span>&amp;</span> <a href="#">Privacy</a></h5></div>
+							<div class="app-footer-features"><i class="icon-line2-lock"></i><h5 class="font-body"><a href="#">600+ empresas</a><span> atendidas</span></h5></div>
 						</div>
 					</div>
 
